# hcc2-rt

./: CMakeLists.txt  LICENSE.txt
cugcn/libdevice/: CMakeLists.txt  bc.cmake
cugcn/libdevice/src/: ballot.ll  lanemask.ll  libicuda2gcn.ll  nsync.ll  trap.ll  vprintfl.cl
libomptarget/: Build_With_CMake.txt  CMakeLists.txt  README.txt  exports
libomptarget/cmake/Modules/: LibomptargetGetDependencies.cmake
libomptarget/deviceRTLs/: CMakeLists.txt
libomptarget/deviceRTLs/amdgcn/: CMakeLists.txt  bc.cmake
libomptarget/deviceRTLs/amdgcn/src/: counter_group.h  counter_groupi.h  data_sharing.cu  debug.cu  debug.h  interface.h  libcall.cu  loop.cu  memoryheap.cu  omp_data.cu  omptarget-nvptx.cu  omptarget-nvptx.h  option.h  parallel.cu  reduction.cu  stdio.cu  support.h  supporti.h  sync.cu  task.cu
libomptarget/deviceRTLs/nvptx/: CMakeLists.txt
libomptarget/deviceRTLs/nvptx/docs/: ReductionDesign.txt
libomptarget/deviceRTLs/nvptx/src/: cancel.cu  counter_groupi.h  critical.cu  data_sharing.cu  debug.cu  debug.h  interface.h  libcall.cu  loop.cu  omp_data.cu  omptarget-nvptx.cu  omptarget-nvptx.h  omptarget-nvptxi.h  option.h  parallel.cu  reduction.cu  state-queue.h  state-queuei.h  stdio.cu  support.h  supporti.h  sync.cu  task.cu
libomptarget/omptests/: Makefile  Makefile.defs
libomptarget/omptests/nt-map-more-than/: desc
libomptarget/omptests/nt-nums-in-teams-par-for-default/: test.cpp
libomptarget/omptests/nt-nums-in-teams-par-for-export/: expected
libomptarget/omptests/nt-target-enter-nowait/: expected  test.c
libomptarget/omptests/nt-target-nowait/: expected  test.c
libomptarget/omptests/t-barrier/: test.c
libomptarget/omptests/t-debugflag/: Makefile
libomptarget/omptests/t-for/: test.c
libomptarget/omptests/t-for-simd/: expected  test.c
libomptarget/omptests/t-is-device-ptr-all-directives/: desc
libomptarget/omptests/t-nums-in-teams-par-for-default/: expected  test.cpp
libomptarget/omptests/t-nums-in-teams-par-for-export/: test.cpp
libomptarget/omptests/t-parallel/: expected  test.c
libomptarget/omptests/t-parallel-for/: test.c
libomptarget/omptests/t-parallel-for-simd/: test.c
libomptarget/omptests/t-reduction/: test.c
libomptarget/omptests/t-reduction-team/: bak
libomptarget/omptests/t-runtime-calls/: test.c
libomptarget/omptests/t-target-api/: test.c
libomptarget/omptests/t-target-map-ptr/: test.cpp
libomptarget/omptests/t-target-nowait-dep1/: test.c
libomptarget/omptests/t-target-teams-distribute/: Makefile  expected  test.c
libomptarget/omptests/t-target-user-pinned/: Makefile  test.c
libomptarget/omptests/t-task/: expected  task.c
libomptarget/omptests/utilities/: utilities.h
libomptarget/omptests/xt-nums-in-teams-par-for-default/: test.cpp
libomptarget/plugins/: CMakeLists.txt
libomptarget/plugins/cuda/: CMakeLists.txt
libomptarget/plugins/cuda/src/: rtl.cpp  rtl.h
libomptarget/plugins/generic-elf-64bit/src/: rtl.cpp
libomptarget/plugins/hsa/: CMakeLists.txt
libomptarget/plugins/hsa/rtl_test/: buildrun.sh  rtl_test.cpp
libomptarget/plugins/hsa/src/: elf_utils.c  elf_utils.h  rtl.cpp  rtl.h
libomptarget/src/: omptarget.cpp  omptarget.h  omptargetplugin.h
libomptarget/test/: CMakeLists.txt  lit.cfg
libomptarget/test/offloading/: offloading_success.c  offloading_success.cpp
runtime/: CMakeLists.txt
runtime/src/: CMakeLists.txt  dllexports  kmp.h  kmp_atomic.c  kmp_atomic.h  kmp_csupport.c  kmp_csupport.cpp  kmp_global.c  kmp_os.h  kmp_runtime.c  kmp_runtime.cpp  kmp_sched.cpp  kmp_settings.c  kmp_threadprivate.c  kmp_threadprivate.cpp
runtime/src/include/45/: omp.h.var  omp_lib.f.var  omp_lib.f90.var  omp_lib.h.var
runtime/src/include/50/: omp.h.var  omp_lib.f.var  omp_lib.f90.var  omp_lib.h.var
utils/: CMakeLists.txt
utils/src/: build-select.cpp  set-linkage.cpp
